# basketball-data-emporium

./: .claude-wf-verification.js  .gitignore  AGENTS.md  CLAUDE.md  README.md  lefthook.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/basketball_data_emporium/: __init__.py
backend/basketball_data_emporium/catalog/: __init__.py  column_manifest.py
backend/basketball_data_emporium/db/: __init__.py  csv_export.py  normalization.py  pool.py  public_surface.py  registry.py  schema_compat.py
backend/basketball_data_emporium/queries/: __init__.py  common.py  players.py  seasons.py  teams.py
backend/basketball_data_emporium/schemas/: __init__.py  common.py
backend/basketball_data_emporium/server/: __init__.py  app.py  catalog_registry.py  cors.py  deps.py  errors.py  rate_limit.py  status_audit.py
backend/basketball_data_emporium/server/models/: __init__.py  catalog.py  common.py  players.py  seasons.py  teams.py
backend/basketball_data_emporium/server/routes/: __init__.py  catalog.py  players.py  seasons.py  status.py  teams.py
backend/basketball_data_emporium/verification/: __init__.py  reconcile_official.py
backend/courtside_data/: __init__.py
backend/courtside_data/catalog/: __init__.py  column_manifest.py
backend/courtside_data/db/: __init__.py  csv_export.py  normalization.py  pool.py  registry.py
backend/courtside_data/queries/: common.py  players.py  teams.py
backend/courtside_data/schemas/: __init__.py  common.py
backend/courtside_data/server/: __init__.py  app.py  catalog_registry.py  cors.py  deps.py  errors.py  rate_limit.py  status_audit.py
backend/courtside_data/server/models/: __init__.py  catalog.py  common.py  players.py  teams.py
backend/courtside_data/server/routes/: __init__.py  catalog.py  players.py  status.py  teams.py
backend/scripts/: measure_baselines.py
backend/tests/: conftest.py  test_duckdb_pool.py  test_status.py
backend/tests/audit/: conftest.py  test_can_read_pipeline_log.py  test_status_audit.py
backend/tests/contract/: conftest.py  test_catalog_contract.py  test_player_routes_contract.py  test_season_routes_contract.py  test_status_contract.py  test_team_routes_contract.py
backend/tests/golden/: build_golden_csv.py  golden.csv  test_golden_rows.py  verify_golden.py
backend/tests/invariant/: conftest.py  known_divergences.py  test_foundation_smoke.py  test_layer0_boxscore_invariants.py  test_layer1_era_availability.py  test_layer2_aggregation.py  test_layer3_referential_integrity.py  test_layer4_distributional.py  test_layer6_pbp_derivation.py  test_layer7_gameid_schedule.py  test_layer8_advanced_recompute.py
backend/tests/openapi/: conftest.py  test_drift.py
backend/tests/schema/: conftest.py  test_column_manifest_lineage.py  test_information_schema.py  test_public_surface_guardrails.py
backend/tests/verification/: conftest.py  test_reconcile_cli.py  test_reconcile_offline.py
chat/: .env.example  .gitignore  .sqlfluff  ARCHITECTURE.md  PLAN.md  README.md  __init__.py  lefthook.yml  pyproject.toml
chat/chat/evals/: __init__.py  conftest.py  layer1.py  layer2.py  live_runner.py  loader.py  replay.py  report.py  test_live_runner.py  test_plan_grading.py  test_result_grading.py
chat/chat_server/: __init__.py  agent.py  clarify.py  composer.py  config.py  db.py  events.py  json_safe.py  log_retention.py  logging_setup.py  main.py  otel.py  pipeline.py  repair.py  schema_context.py  sessions.py  sqlgate.py  validation.py
chat/chat_server/prompts/: README.md  clarify.txt  repair.txt  sql_analyst_system.md
chat/chat_server/routes/: __init__.py  chat.py  meta.py  sessions.py
chat/chat_server/semantic_catalog/: __init__.py  loader.py  schema.py
chat/chat_server/semantic_catalog/models/: awards.yml  draft.yml  franchise.yml  games.yml  head_to_head.yml  player.yml  player_career.yml  player_game_box.yml  shots.yml  (+3 more)
chat/chat_server/templates/: __init__.py  _loader.py  _registry.py
chat/chat_tests/: __init__.py  conftest.py  test_agent.py  test_clarify.py  test_compose_governed.py  test_composer.py  test_config.py  test_db_dryrun.py  test_db_watchdog.py  test_events.py  test_governed_path.py  test_governed_tools.py  test_history.py  test_json_safe.py  test_observability.py  test_pipeline.py  test_queryplan_modes.py  test_repair.py  test_routes_chat.py  test_security_adversarial.py  test_semantic_catalog.py  test_sessions.py  test_sqlgate.py  test_templates.py  test_templates_part_a.py  test_templates_part_b.py  test_templates_part_c.py  test_validation.py
chat/chat_tests/fixtures/: career_conditional_aggregate_top5.json  clutch_terminal__buzzer_beaters_kobe_1996_97.json  clutch_terminal__clutch_ts_leader_2023_playoffs.json  corner_threes_split_curry_2016_17.json  country_gp_leaders_min500_top5.json  fifty_forty_ninety_min25.json  franchise_final_season_ortg_seattle.json  hs_draftee_career_ws_top3.json  league_pace_era_9899_2223.json  lineup_court__fiveman_shared_court_warriors_2017_18.json  manifest.py  margin_split_kobe_2009_10.json  milestone_age_youngest.json  pbp_aggregate__fouls_by_period_q4_2022_23.json  pbp_aggregate__largest_scoring_run_finals_since_2009_10.json  per100_player_compare_trae_luka.json  player_team_split_harden_2022_23.json  rare_stat_line_min10.json  rookie_vs_final_tim_duncan.json  streak_stat_overall.json  two_player_shared_team_seasons_lebron_wade.json
chat/chat_tests/sample_conversations/: nba_chatbot_sample_conversations_50.csv
chat/frontend/: .gitignore  .prettierignore  eslint.config.js  index.html  knip.json  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
chat/frontend/e2e/: chat.clarification.spec.ts  chat.error.ts  chat.notanswerable.spec.ts  chat.smoke.ts
chat/frontend/src/: App.tsx  main.tsx
chat/plans/arch-overhaul/: ARCHITECTURE.md  EVALS.md  nba_chatbot_evals_v2.csv
chat/scripts/: export_log_schemas.py  export_openapi.py  export_sse_schema.py  live_routing_smoke.py  load_test.py  run_template.py  snapshot_golds.py
(+1645 files in other folders)
