[project]
name = "courtside-data"
version = "0.1.0"
description = "FastAPI sidecar that serves the Courtside Data API over a read-only DuckDB store."
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Courtside Data" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "duckdb>=1.4,<2.0",
    "pydantic>=2.7",
    "pyarrow>=17",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
courtside-data = "courtside_data.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["courtside_data"]

[tool.uv]
package = true
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
