[project]
name = "basketball-data-emporium"
version = "0.1.0"
description = "FastAPI sidecar that serves the Basketball Data Emporium API over a read-only DuckDB store."
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Basketball Data Emporium" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "duckdb>=1.4,<2.0",
    "pydantic>=2.7",
    "pyarrow>=17",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
basketball-data-emporium = "basketball_data_emporium.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["basketball_data_emporium"]

[tool.uv]
package = true
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
