[project]
name = "chat-server"
version = "0.1.0"
description = "Basketball data chatbot API"
requires-python = ">=3.12,<3.14"
readme = "PLAN.md"
dependencies = [
    "fastapi>=0.135,<1.0",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10,<3.0",
    "pydantic-ai-slim[openrouter]>=2.5,<3.0",
    "duckdb>=1.2,<2.0",
    "sqlglot>=25,<26",
    # `sqlfluff` is moved to the `dev` dependency group below — it's a
    # linting CLI (`sqlfluff lint --dialect duckdb`), not imported by
    # the app package (PLAN §7.4 / §14.1).
    "httpx>=0.28",
    "loggingredactor>=0.0.7",
    "pydantic-settings>=2.10",
    # PyYAML is a direct dep of `chat_server.semantic_catalog` (PLAN
    # §1 Phase 1) -- declared explicitly even though it currently
    # arrives transitively, so the catalog loader does not silently
    # break if a transitive consumer drops it.
    "pyyaml>=6,<7",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a5",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "deptry>=0.20",
    "check-jsonschema>=0.30",
    "jsonschema>=4",
    # SQLFluff CLI lint (PLAN §7.4 / §14.1). Lives in the dev group so
    # `pip install chat-server` doesn't pull in the linter.
    "sqlfluff>=3.2,<4.0",
]

[project.optional-dependencies]
# Phase 7: optional OpenTelemetry span hooks. The base install does NOT
# pull these in — `chat_server.otel` is off by default and only imports
# `opentelemetry` inside its `_ENABLED` guard (PLAN §4.1#9 / §15 Phase 7).
otel = [
    "opentelemetry-api>=1.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.per-file-ignores]
"chat_tests/**" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["chat_tests"]

[tool.ty.src]
# Phase 8: include the test package so `ty check chat_server chat_tests`
# exercises every annotated source file (PLAN §14.1 + §15 Phase 8 exit).
include = ["chat_server", "chat_tests"]

[tool.ty.environment]
python-version = "3.12"

[tool.deptry]
# Phase 8 hardening (PLAN §15 Phase 8 exit / §14.1).
#
# - `known_first_party` tells deptry `chat_server` is a first-party
#   module so the DEP003 transitive-dep warnings for it stop firing.
# - `extend_exclude` skips the `chat_tests/` tree — tests legitimately
#   import dev deps (`pytest`, `pytest-asyncio`, `jsonschema`) that
#   would otherwise flag as DEP004 misplaced-dev-dep.
# - `per_rule_ignores` silences the remaining legitimate misses:
#   * `pydantic_core` (DEP003) — pulled transitively by `pydantic`,
#     we use `PydanticUndefined` directly.
#   * `opentelemetry-api` (DEP001) — Phase 7 OTel hook in
#     `chat_server/otel.py` imports it lazily under a runtime flag
#     and is gated behind `[project.optional-dependencies].otel`.
# - `package_module_name_map` maps `opentelemetry-api` (which has no
#   top-level module by the same name) to its actual import name.
known_first_party = ["chat_server"]
extend_exclude = ["chat_tests"]
per_rule_ignores = {"DEP001" = ["opentelemetry-api"], "DEP003" = ["pydantic_core"]}
package_module_name_map = {"opentelemetry-api" = "opentelemetry"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_server"]